--- a/styles/style.css
+++ b/styles/style.css
@@ -551,6 +551,9 @@ a:visited {
 }
 
 @media (max-width: 500px) {
+  .skills::after {
+    display: none;
+  }
   .skills__grid {
     grid-template-columns: repeat(3, 1fr);
     text-align: center;
